added links to login and logout

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react": "^18",
 		"react-big-calendar": "^1.8.4",
 		"react-dom": "^18",
+		"react-spinners": "^0.13.8",
 		"tailwind-merge": "^1.14.0",
 		"yarn": "^1.22.19"
 	},
